--- a/index.html
+++ b/index.html
@@ -1,58 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Form</title>
-    <style>
-      body {
-        background-image: url(./images/premium_photo-1701723116503-cc7c35480ea4.avif);
-        background-repeat: repeat;
-        background-size: 120%;
-        background-position: center;
-      }
-      .container {
-        margin: 10% auto;
-        width: 40%;
-        padding: 2.5cm;
-        border: 10px solid #0c9ada;
-        background-color: #3b459a;
-      }
-      h1,p{
-        color: white;
-        text-align: center;
-        font-family: system-ui;
-      }
-      input{
-        background-color: transparent;
-        border: none;
-        border-bottom: 2px solid #3799DA;
-        color: #3799DA;
-        width: 100%;
-        margin: 0.5cm  0;
-        padding: 0 0 0.2cm 0;
-      }
-      button{
-        color: white;
-        background: transparent;
-        border: 2px solid white;
-        font-family: system-ui;
-        margin: 1cm 0 0 37%;
-        padding: 0.4cm 1cm;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Contact Us</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero rerum <br>
-        inventore dolor dignissimos laboriosam
-      </p>
-      <input type="text" value="Your Name"/><br>
-      <input type="text" value="Your Mail"/><br>
-      <input type="text" value="Your Message"/><br>
-      <button>SUBMIT &#129130;</button>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Assignments</title>
+  <style>
+    body{
+      background-color: rgb(27, 26, 26);
+    }
+    h1{
+      color: rgb(26, 222, 104);
+      text-align: center;
+      padding: 0.3cm 0;
+    }
+    h2{
+      color: rgb(224, 22, 8);
+      margin: 0.3cm 2cm;
+    }
+    a{
+      margin: 0.2cm 4cm;
+      color: white;
+      font-size: 1.4rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>Assignments</h1>
+  <h2>Assignment 1</h2>
+  <a href="./Cards/index.html">Cards</a><br/>
+  <a href="./CSS contact Form/index.html">Contact Form</a>
+</body>
 </html>
