--- a/CSS contact Form/index.html
+++ b/CSS contact Form/index.html
@@ -54,5 +54,8 @@
       <input type="text" value="Your Message"/><br>
       <button>SUBMIT &#129130;</button>
     </div>
+    <a href="../index.html">Home Page</a><br/>
+    <a href="../Cards/index.html">Cards</a><br/>
   </body>
 </html>
+
