--- a/Cards/index.html
+++ b/Cards/index.html
@@ -58,6 +58,9 @@
         border-radius: 50px;
         margin: 0 0 1cm 0;
       }
+      a{
+        color: aqua;
+      }
     </style>
   </head>
   <body>
@@ -79,7 +82,10 @@
         <h1>Youtube</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui dicta enim fugit vitae est, velit atque.</p>
         <button>Read More</button>
+        <a href="../index.html">Home Page</a><br/>
+    <a href="../CSS contact Form/index.html">Cards</a><br/>
       </div>
     </div>
   </body>
 </html>
+
