--- a/CSS contact Form/index.html
+++ b/CSS contact Form/index.html
@@ -40,6 +40,9 @@
         margin: 1cm 0 0 37%;
         padding: 0.4cm 1cm;
       }
+      a{
+        color: aqua;
+      }
     </style>
   </head>
   <body>
@@ -58,4 +61,5 @@
     <a href="../Cards/index.html">Cards</a><br/>
   </body>
 </html>
+
 
