--- a/Cards/index.html
+++ b/Cards/index.html
@@ -82,10 +82,11 @@
         <h1>Youtube</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate qui dicta enim fugit vitae est, velit atque.</p>
         <button>Read More</button>
-        <a href="../index.html">Home Page</a><br/>
-    <a href="../CSS contact Form/index.html">Cards</a><br/>
       </div>
     </div>
+    <a href="../index.html">Home Page</a><br/>
+    <a href="../CSS contact Form/index.html">Contact Form</a><br/>
   </body>
 </html>
+
 
