--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
   <h2>Assignment 1</h2>
   <a href="./Cards/index.html">Cards</a><br/>
   <a href="./CSS contact Form/index.html">Contact Form</a>
+  <h2>Assignment 2</h2>
+  <a href="./Nav/index.html">Navbar</a><br/>
 </body>
 </html>
+
