--- a/Nav/index.html
+++ b/Nav/index.html
@@ -97,5 +97,11 @@
           <button class="button">Contact</button>
         </div>
       </div>
+
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <a href="../index.html">Home Page</a>
   </body>
 </html>
